adjusted subreddits with threshold = 2

--- a/Preprocessing/validate_pulls.ipynb
+++ b/Preprocessing/validate_pulls.ipynb
@@ -49,6 +49,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "303482556"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subs.sort_values(by='subscribers', ascending=False).head(10).subscribers.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "152            funny\n",
+       "115        AskReddit\n",
+       "167              aww\n",
+       "114             pics\n",
+       "26         worldnews\n",
+       "153           movies\n",
+       "65     todayilearned\n",
+       "63           science\n",
+       "67            videos\n",
+       "155             news\n",
+       "Name: subreddit, dtype: object"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subs.sort_values(by='subscribers', ascending=False).head(10).subreddit"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 54,
    "metadata": {},
    "outputs": [],
@@ -59,22 +109,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "comments = os.listdir('../../Files/Comments')\n",
-    "try:\n",
-    "    comments.pop(comments.index('.DS_Store'))\n",
-    "except ValueError:\n",
-    "    pass\n",
     "\n",
-    "subs = pd.read_pickle('subreddits_picked.pickle')\n",
-    "subs['Comments'] = 0\n",
-    "for i in comments:\n",
-    "    subs.loc[subs['subreddit'] == i[:-7], 'Comments'] = 1\n",
-    "submision_df = subs.groupby('Submissions').sum()\n",
-    "submision_df"
+    "for i in submissions:\n",
+    "    subs.loc[subs['subreddit'] == i[:-7], 'Submissions'] = 1"
    ]
   },
   {
