--- a/Test_run/test.ipynb
+++ b/Test_run/test.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,8 +25,160 @@
     "import pyspark\n",
     "import datetime\n",
     "import os\n",
-    "\n",
+    "from itertools import chain\n",
+    "import csv\n",
     "%config InlineBackend.figure_format='retina'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../Preprocessing/subreddits.csv', newline='') as f:\n",
+    "    reader = csv.reader(f)\n",
+    "    subreddits = list(reader)\n",
+    "\n",
+    "subreddits = list(chain.from_iterable(subreddits))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def identify_missing_files(dir, files):\n",
+    "    missing_files = []\n",
+    "    for file in files:\n",
+    "        if not os.path.exists(os.path.join(dir, file)) or os.path.getsize(os.path.join(dir, file)) <= 459:\n",
+    "            missing_files.append(file)\n",
+    "    return missing_files\n",
+    "\n",
+    "\n",
+    "def splittimeframe(subreddit, start, end, split): # splits the time into a series of smaller files to pull\n",
+    "    split_list = []\n",
+    "    step = (end - start) / split\n",
+    "    for i in range(split):\n",
+    "            s = int(start + i * step)\n",
+    "            e = int((start + (i + 1) * step) - 1)\n",
+    "            if i == split - 1:\n",
+    "                    e += 86400\n",
+    "            split_list.append(f'{subreddit}-{s}.pickle')\n",
+    "\n",
+    "    return split_list\n",
+    "\n",
+    "def find_existing_pulls(type, subreddits): #remove existing pulls from subreddits list\n",
+    "    done = os.listdir(f'../../Files/{type}/')\n",
+    "    for i in done:\n",
+    "        done[done.index(i)] = i[:-7]\n",
+    "    res = [i for i in subreddits if i not in done]\n",
+    "    return res\n",
+    "\n",
+    "\n",
+    "subreddits_not_completed = find_existing_pulls('Submissions', subreddits)\n",
+    "\n",
+    "start = int(datetime.datetime(2020, 3, 1).timestamp())\n",
+    "end = int(datetime.datetime(2022, 3, 31).timestamp())\n",
+    "split = 24\n",
+    "missing_parts = []\n",
+    "for subreddit in subreddits_not_completed:\n",
+    "    \n",
+    "    subreddit_parts = splittimeframe(subreddit, start, end, split)\n",
+    "    missing = identify_missing_files(f'../../Files/Submissions/temp/', subreddit_parts)\n",
+    "    for m in missing:\n",
+    "        missing_parts.append(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4559"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(missing_parts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subreddits_not_completed = find_existing_pulls('Submissions', subreddits)\n",
+    "\n",
+    "start = int(datetime.datetime(2020, 3, 1).timestamp())\n",
+    "end = int(datetime.datetime(2022, 3, 31).timestamp())\n",
+    "split = 24\n",
+    "missing_parts = []\n",
+    "for subreddit in subreddits_not_completed:\n",
+    "    \n",
+    "    subreddit_parts = splittimeframe(subreddit, start, end, split)\n",
+    "    missing = identify_missing_files(f'../../Files/Submissions/temp/', subreddit_parts)\n",
+    "    for m in missing:\n",
+    "        missing_parts.append(m)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2385"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "missing_parts.index('PoliticalCompassMemes-1618583250.pickle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = open('../../Files/Submissions/temp/missing.csv', \"w\")\n",
+    "writer = csv.writer(file, delimiter = \"\\n\")\n",
+    "for list_ in missing_parts:\n",
+    "     writer.writerow([list_])\n",
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dankmemes 1583017200\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(missing_parts[0][:-18], missing_parts[0][-17:-7])\n"
    ]
   },
   {
@@ -61,48 +213,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ivermectin 1583017200 1585753049\n",
-      "ivermectin 1585753050 1588488899\n",
-      "ivermectin 1588488900 1591224749\n",
-      "ivermectin 1591224750 1593960599\n",
-      "ivermectin 1593960600 1596696449\n",
-      "ivermectin 1596696450 1599432299\n",
-      "ivermectin 1599432300 1602168149\n",
-      "ivermectin 1602168150 1604903999\n",
-      "ivermectin 1604904000 1607639849\n",
-      "ivermectin 1607639850 1610375699\n",
-      "ivermectin 1610375700 1613111549\n",
-      "ivermectin 1613111550 1615847399\n",
-      "ivermectin 1615847400 1618583249\n",
-      "ivermectin 1618583250 1621319099\n",
-      "ivermectin 1621319100 1624054949\n",
-      "ivermectin 1624054950 1626790799\n",
-      "ivermectin 1626790800 1629526649\n",
-      "ivermectin 1629526650 1632262499\n",
-      "ivermectin 1632262500 1634998349\n",
-      "ivermectin 1634998350 1637734199\n",
-      "ivermectin 1637734200 1640470049\n",
-      "ivermectin 1640470050 1643205899\n",
-      "ivermectin 1643205900 1645941749\n",
-      "ivermectin 1645941750 1648763999\n"
+      "1 ivermectin 03/01/2020, 00:00:00 end 04/01/2020, 16:57:29\n",
+      "2 ivermectin 04/01/2020, 16:57:30 end 05/03/2020, 08:54:59\n",
+      "3 ivermectin 05/03/2020, 08:55:00 end 06/04/2020, 00:52:29\n",
+      "4 ivermectin 06/04/2020, 00:52:30 end 07/05/2020, 16:49:59\n",
+      "5 ivermectin 07/05/2020, 16:50:00 end 08/06/2020, 08:47:29\n",
+      "6 ivermectin 08/06/2020, 08:47:30 end 09/07/2020, 00:44:59\n",
+      "7 ivermectin 09/07/2020, 00:45:00 end 10/08/2020, 16:42:29\n",
+      "8 ivermectin 10/08/2020, 16:42:30 end 11/09/2020, 07:39:59\n",
+      "9 ivermectin 11/09/2020, 07:40:00 end 12/10/2020, 23:37:29\n",
+      "10 ivermectin 12/10/2020, 23:37:30 end 01/11/2021, 15:34:59\n",
+      "11 ivermectin 01/11/2021, 15:35:00 end 02/12/2021, 07:32:29\n",
+      "12 ivermectin 02/12/2021, 07:32:30 end 03/15/2021, 23:29:59\n",
+      "13 ivermectin 03/15/2021, 23:30:00 end 04/16/2021, 16:27:29\n",
+      "14 ivermectin 04/16/2021, 16:27:30 end 05/18/2021, 08:24:59\n",
+      "15 ivermectin 05/18/2021, 08:25:00 end 06/19/2021, 00:22:29\n",
+      "16 ivermectin 06/19/2021, 00:22:30 end 07/20/2021, 16:19:59\n",
+      "17 ivermectin 07/20/2021, 16:20:00 end 08/21/2021, 08:17:29\n",
+      "18 ivermectin 08/21/2021, 08:17:30 end 09/22/2021, 00:14:59\n",
+      "19 ivermectin 09/22/2021, 00:15:00 end 10/23/2021, 16:12:29\n",
+      "20 ivermectin 10/23/2021, 16:12:30 end 11/24/2021, 07:09:59\n",
+      "21 ivermectin 11/24/2021, 07:10:00 end 12/25/2021, 23:07:29\n",
+      "22 ivermectin 12/25/2021, 23:07:30 end 01/26/2022, 15:04:59\n",
+      "23 ivermectin 01/26/2022, 15:05:00 end 02/27/2022, 07:02:29\n",
+      "24 ivermectin 02/27/2022, 07:02:30 end 03/31/2022, 23:59:59\n"
      ]
     }
    ],
    "source": [
+    "i = 1\n",
     "for sub, start, end in l:\n",
-    "    print(sub, start, end)"
+    "    print(i, sub, datetime.datetime.fromtimestamp(start).strftime(\"%m/%d/%Y, %H:%M:%S\"), 'end' ,  datetime.datetime.fromtimestamp(end).strftime(\"%m/%d/%Y, %H:%M:%S\"))\n",
+    "    i += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +288,7 @@
        " ['ivermectin', 1645941750, 1648763999]]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,70 +299,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " 0 start 03/01/2020, 00:00:00, end 04/01/2020, 16:57:29\n",
-      " 1 start 04/01/2020, 16:57:30, end 05/03/2020, 08:54:59\n",
-      " 2 start 05/03/2020, 08:55:00, end 06/04/2020, 00:52:29\n",
-      " 3 start 06/04/2020, 00:52:30, end 07/05/2020, 16:49:59\n",
-      " 4 start 07/05/2020, 16:50:00, end 08/06/2020, 08:47:29\n",
-      " 5 start 08/06/2020, 08:47:30, end 09/07/2020, 00:44:59\n",
-      " 6 start 09/07/2020, 00:45:00, end 10/08/2020, 16:42:29\n",
-      " 7 start 10/08/2020, 16:42:30, end 11/09/2020, 07:39:59\n",
-      " 8 start 11/09/2020, 07:40:00, end 12/10/2020, 23:37:29\n",
-      " 9 start 12/10/2020, 23:37:30, end 01/11/2021, 15:34:59\n",
-      " 10 start 01/11/2021, 15:35:00, end 02/12/2021, 07:32:29\n",
-      " 11 start 02/12/2021, 07:32:30, end 03/15/2021, 23:29:59\n",
-      " 12 start 03/15/2021, 23:30:00, end 04/16/2021, 16:27:29\n",
-      " 13 start 04/16/2021, 16:27:30, end 05/18/2021, 08:24:59\n",
-      " 14 start 05/18/2021, 08:25:00, end 06/19/2021, 00:22:29\n",
-      " 15 start 06/19/2021, 00:22:30, end 07/20/2021, 16:19:59\n",
-      " 16 start 07/20/2021, 16:20:00, end 08/21/2021, 08:17:29\n",
-      " 17 start 08/21/2021, 08:17:30, end 09/22/2021, 00:14:59\n",
-      " 18 start 09/22/2021, 00:15:00, end 10/23/2021, 16:12:29\n",
-      " 19 start 10/23/2021, 16:12:30, end 11/24/2021, 07:09:59\n",
-      " 20 start 11/24/2021, 07:10:00, end 12/25/2021, 23:07:29\n",
-      " 21 start 12/25/2021, 23:07:30, end 01/26/2022, 15:04:59\n",
-      " 22 start 01/26/2022, 15:05:00, end 02/27/2022, 07:02:29\n",
-      " 23 start 02/27/2022, 07:02:30, end 03/31/2022, 23:59:59\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "step = (end - start) / split\n",
-    "for i in range(split):\n",
-    "        s = start + i * step\n",
-    "        e = (start + (i + 1) * step) - 1\n",
-    "        if i == split - 1:\n",
-    "                e += 86400\n",
-    "        s_format = datetime.datetime.fromtimestamp(s).strftime(\"%m/%d/%Y, %H:%M:%S\")\n",
-    "        e_format = datetime.datetime.fromtimestamp(e).strftime(\"%m/%d/%Y, %H:%M:%S\")\n",
-    "        print(f' {i} start {s_format}, end {e_format}')"
+    "files = os.listdir(f'../../Files/{ptype}/temp/')\n",
+    "files.pop(files.index('missing.csv'))\n",
+    "\n",
+    "t = [file[:-18] for file in files]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'03/01/2020, 00:00:00'"
+       "['aww-1585753050.pickle',\n",
+       " 'aww-1618583250.pickle',\n",
+       " 'aww-1596696450.pickle',\n",
+       " 'aww-1599432300.pickle',\n",
+       " 'aww-1634998350.pickle',\n",
+       " 'aww-1624054950.pickle',\n",
+       " 'aww-1645941750.pickle',\n",
+       " 'aww-1629526650.pickle',\n",
+       " 'aww-1632262500.pickle',\n",
+       " 'aww-1621319100.pickle',\n",
+       " 'aww-1591224750.pickle',\n",
+       " 'aww-1615847400.pickle',\n",
+       " 'aww-1602168150.pickle',\n",
+       " 'aww-1588488900.pickle',\n",
+       " 'aww-1604904000.pickle',\n",
+       " 'aww-1593960600.pickle',\n",
+       " 'aww-1610375700.pickle',\n",
+       " 'aww-1613111550.pickle',\n",
+       " 'aww-1583017200.pickle',\n",
+       " 'aww-1643205900.pickle',\n",
+       " 'aww-1607639850.pickle',\n",
+       " 'aww-1637734200.pickle',\n",
+       " 'aww-1626790800.pickle',\n",
+       " 'aww-1640470050.pickle']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "datetime.datetime.fromtimestamp(test).strftime(\"%m/%d/%Y, %H:%M:%S\")"
+    "files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files = os.listdir('../../TESTMERGE/')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = [file[:-18] for file in files]\n",
+    "\n",
+    "subreddits = []\n",
+    "for i in t:\n",
+    "    if i not in subreddits:\n",
+    "        subreddits.append(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def merge_splits(files, subreddit, ptype):\n",
+    "    merge_candidates = []\n",
+    "    for file in files:\n",
+    "        if os.path.getsize(f'../../Files/{ptype}/temp/{file}') > 459:\n",
+    "            if file[:-18] == subreddit:\n",
+    "                # merge_candidates.append(f'../../Files/{ptype}/temp/{file}')\n",
+    "                merge_candidates.append(f'../../TESTMERGE/{file}')\n",
+    "\n",
+    "    merge_candidates.sort()\n",
+    "    if len(merge_candidates) == 24:\n",
+    "        df = pd.concat([pd.read_pickle(candidate) for candidate in merge_candidates])\n",
+    "        df.to_pickle(f'../../Files/{ptype}/{subreddit}.pickle')\n",
+    "       \n",
+    "        # for candidate in merge_candidates:\n",
+    "        #     os.remove(candidate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subreddit = 'aww'\n",
+    "ptype = 'Submissions'\n",
+    "merge_candidates = []\n",
+    "for file in files:\n",
+    "    if os.path.getsize(f'../../Files/{ptype}/temp/{file}') > 459:\n",
+    "        if file[:-18] == subreddit:\n",
+    "            # merge_candidates.append(f'../../Files/{ptype}/temp/{file}')\n",
+    "            merge_candidates.append(f'../../TESTMERGE/{file}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([pd.read_pickle(candidate) for candidate in merge_candidates])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1251041"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df)"
    ]
   },
   {
