Redid training set, method, start of training pipe

--- a/Test_run/test.ipynb
+++ b/Test_run/test.ipynb
@@ -4296,6 +4296,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Encoding of times"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def base36encode(number, alphabet='0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ'):\n",
+    "    \"\"\"Converts an integer to a base36 string.\"\"\"\n",
+    "    if not isinstance(number, (int)):\n",
+    "        raise TypeError('number must be an integer')\n",
+    "\n",
+    "    base36 = ''\n",
+    "    sign = ''\n",
+    "\n",
+    "    if number < 0:\n",
+    "        sign = '-'\n",
+    "        number = -number\n",
+    "\n",
+    "    if 0 <= number < len(alphabet):\n",
+    "        return sign + alphabet[number]\n",
+    "\n",
+    "    while number != 0:\n",
+    "        number, i = divmod(number, len(alphabet))\n",
+    "        base36 = alphabet[i] + base36\n",
+    "\n",
+    "    return sign + base36\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "datetime_obj = datetime.datetime.fromtimestamp(1642024930).strftime('%Y-%m-%d %H:%M:%S')\n",
+    "print(datetime_obj)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# PySpark Test"
    ]
   },
