--- a/classifier/explainable/xgboost.ipynb
+++ b/classifier/explainable/xgboost.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,16 +17,17 @@
     "\n",
     "import spacy\n",
     "import numpy as np\n",
-    "import sklearn as sk \n"
+    "import sklearn as skl \n",
+    "import xgboost as xgb\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_pickle('../../../Files/Submissions/train/submission_train_sm.pickle')"
+    "df = pd.read_pickle('../../../Files/Submissions/train/submission_train_sm_v2.pickle')"
    ]
   },
   {
@@ -35,30 +36,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.reset_index(inplace=True)\n",
     "df['text'] = df['title']\n",
-    "df['labels'] = df['label']\n",
     "df = df[['text', 'labels']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"WARMINGTON: COVID-19 the 'nail in the coffin' for Pickering Markets\""
+       "92313"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.text[0]"
+    "len(df)"
    ]
   },
   {
