--- a/classifier/nn/test.ipynb
+++ b/classifier/nn/test.ipynb
@@ -15,6 +15,471 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd \n",
+    "from keras.utils import to_categorical\n",
+    "from torch.nn.utils.rnn import pad_sequence\n",
+    "\n",
+    "\n",
+    "from keras.models import Model\n",
+    "from keras.layers import Input, Embedding\n",
+    "from keras.layers import Bidirectional, LSTM\n",
+    "from keras.layers import Dropout, Dense, Activation\n",
+    "\n",
+    "import numpy as np\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target = 'label'\n",
+    "input_column = 'cleanTitle'\n",
+    "\n",
+    "train_data = pd.read_pickle('../../../Files/Submissions/train/train_split_submission.pickle') \n",
+    "valid_data = pd.read_pickle('../../../Files/Submissions/train/val_split_submission.pickle')\n",
+    "test_data = pd.read_pickle('../../../Files/Submissions/train/test_split_submission.pickle')\n",
+    "\n",
+    "train_data = train_data[[target, input_column]]\n",
+    "valid_data = valid_data[[target, input_column]]\n",
+    "test_data = test_data[[target, input_column]]\n",
+    "\n",
+    "data = pd.concat([train_data, valid_data, test_data])\n",
+    "\n",
+    "\n",
+    "train_instances = train_data[input_column].apply(str).apply(str.split)\n",
+    "train_labels = train_data[target]\n",
+    "\n",
+    "# collect known word tokens and tags\n",
+    "wordset, labelset = set(), set()\n",
+    "\n",
+    "# collect tags from all data, to prevent unseen labels\n",
+    "labelset.update(set(data[target]))\n",
+    "\n",
+    "# get the vocabulary\n",
+    "for words in train_instances:\n",
+    "    wordset.update(set(words))\n",
+    "\n",
+    "# map words and tags into ints\n",
+    "PAD = '-PAD-'\n",
+    "UNK = '-UNK-'\n",
+    "word2int = {word: i + 2 for i, word in enumerate(sorted(wordset))}\n",
+    "word2int[PAD] = 0  # special token for padding\n",
+    "word2int[UNK] = 1  # special token for unknown words\n",
+    " \n",
+    "label2int = {label: i for i, label in enumerate(sorted(labelset))}\n",
+    "# inverted index to translate it back\n",
+    "int2label = {i:label for label, i in label2int.items()}\n",
+    "\n",
+    "\n",
+    "def convert2ints(instances):\n",
+    "    \"\"\"\n",
+    "    function to apply the mapping to all words\n",
+    "    \"\"\"\n",
+    "    result = []\n",
+    "    for words in instances:\n",
+    "        # replace words with int, 1 for unknown words\n",
+    "        word_ints = [word2int.get(word, 1) for word in words]\n",
+    "        result.append(word_ints)\n",
+    "    return result\n",
+    "                          \n",
+    "train_instances_int = convert2ints(train_instances)\n",
+    "train_labels_int = [label2int[label] for label in train_labels]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1408474"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(test_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_instances = test_data[input_column].apply(str).apply(str.split)\n",
+    "test_labels = test_data[target]\n",
+    "\n",
+    "test_instances_int = convert2ints(test_instances)\n",
+    "test_labels_int = [label2int[label] for label in test_labels]\n",
+    "\n",
+    "# convert dev data\n",
+    "val_instances = valid_data[input_column].apply(str).apply(str.split)\n",
+    "val_labels = valid_data[target]\n",
+    "\n",
+    "val_instances_int = convert2ints(val_instances)\n",
+    "val_labels_int = [label2int[label] for label in val_labels]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 1., 0.], dtype=float32)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from keras.utils import to_categorical\n",
+    "\n",
+    "train_labels_1hot = to_categorical(train_labels_int, len(label2int))\n",
+    "test_labels_1hot = to_categorical(test_labels_int, len(label2int))\n",
+    "val_labels_1hot = to_categorical(val_labels_int, len(label2int))\n",
+    "\n",
+    "train_labels_1hot[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "['shill', 'organization'] 2\n",
+      "[22655 17709     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0] 15\n"
+     ]
+    }
+   ],
+   "source": [
+    "# compute 95th percentile of training sentence lengths\n",
+    "L = sorted(map(len, train_instances))\n",
+    "MAX_LENGTH = L[int(len(L)*0.95)]\n",
+    "print(MAX_LENGTH)\n",
+    "\n",
+    "# apply padding\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "train_instances_int = pad_sequences(train_instances_int, padding='post', maxlen=MAX_LENGTH)\n",
+    "test_instances_int = pad_sequences(test_instances_int, padding='post', maxlen=MAX_LENGTH)\n",
+    "val_instances_int = pad_sequences(val_instances_int, padding='post', maxlen=MAX_LENGTH)\n",
+    "\n",
+    "print(train_instances[0], len(train_instances[0]))\n",
+    "print(train_instances_int[0], len(train_instances_int[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model_4\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " word_IDs (InputLayer)       [(None, 15)]              0         \n",
+      "                                                                 \n",
+      " embedding_4 (Embedding)     (None, 15, 64)            1836928   \n",
+      "                                                                 \n",
+      " conv1d_4 (Conv1D)           (None, 15, 64)            12352     \n",
+      "                                                                 \n",
+      " activation_4 (Activation)   (None, 15, 64)            0         \n",
+      "                                                                 \n",
+      " global_max_pooling1d_4 (Glo  (None, 64)               0         \n",
+      " balMaxPooling1D)                                                \n",
+      "                                                                 \n",
+      " dropout_8 (Dropout)         (None, 64)                0         \n",
+      "                                                                 \n",
+      " dense_8 (Dense)             (None, 32)                2080      \n",
+      "                                                                 \n",
+      " dropout_9 (Dropout)         (None, 32)                0         \n",
+      "                                                                 \n",
+      " dense_9 (Dense)             (None, 3)                 99        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 1,851,459\n",
+      "Trainable params: 1,851,459\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "from keras.models import Model\n",
+    "from keras.layers import Input\n",
+    "from keras.layers import Embedding\n",
+    "from keras.layers.convolutional import Conv1D\n",
+    "from keras.layers import GlobalMaxPooling1D, Dropout\n",
+    "from keras.layers.core import Dense, Activation\n",
+    "import numpy as np\n",
+    "\n",
+    "# make it repeatable\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "# set parameters of matrices and convolution\n",
+    "embedding_dim = 64\n",
+    "nb_filter = 64\n",
+    "filter_length = 3\n",
+    "hidden_dims = 32\n",
+    "stride_length = 1\n",
+    "\n",
+    "inputs = Input((MAX_LENGTH, ), \n",
+    "               name='word_IDs')\n",
+    "embeddings = Embedding(len(word2int), \n",
+    "                       embedding_dim, \n",
+    "                       input_length=MAX_LENGTH)(inputs)\n",
+    "convolution = Conv1D(filters=nb_filter,  # Number of filters to use\n",
+    "                    kernel_size=filter_length, # n-gram range of each filter.\n",
+    "                    padding='same',  #valid: don't go off edge; same: use padding before applying filter\n",
+    "                    activation='relu',\n",
+    "                    strides=stride_length)(embeddings)\n",
+    "convolution2 = Activation(activation='tanh')(convolution)\n",
+    "pooling = GlobalMaxPooling1D()(convolution2)\n",
+    "dropout1 = Dropout(0.2)(pooling)\n",
+    "dense = Dense(hidden_dims, activation='relu')(dropout1)\n",
+    "dropout2 = Dropout(0.2)(dense)\n",
+    "output = Dense(len(label2int), activation='softmax')(dropout2)\n",
+    "\n",
+    "model = Model(inputs=[inputs], outputs=[output])\n",
+    "model.compile(optimizer='adam',\n",
+    "              loss='categorical_crossentropy',\n",
+    "              metrics=['accuracy', 'AUC'])\n",
+    "\n",
+    "# get alist of all the layers and their size\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "1079/1079 [==============================] - 14s 12ms/step - loss: 0.4804 - accuracy: 0.8041 - auc: 0.9381 - val_loss: 0.3769 - val_accuracy: 0.8504 - val_auc: 0.9612\n",
+      "Epoch 2/5\n",
+      "1079/1079 [==============================] - 13s 12ms/step - loss: 0.2981 - accuracy: 0.8877 - auc: 0.9752 - val_loss: 0.3921 - val_accuracy: 0.8449 - val_auc: 0.9592\n",
+      "Epoch 3/5\n",
+      "1079/1079 [==============================] - 13s 12ms/step - loss: 0.2238 - accuracy: 0.9176 - auc: 0.9855 - val_loss: 0.4104 - val_accuracy: 0.8468 - val_auc: 0.9582\n",
+      "Epoch 4/5\n",
+      "1079/1079 [==============================] - 14s 13ms/step - loss: 0.1736 - accuracy: 0.9365 - auc: 0.9911 - val_loss: 0.4654 - val_accuracy: 0.8419 - val_auc: 0.9528\n",
+      "Epoch 5/5\n",
+      "1079/1079 [==============================] - 13s 12ms/step - loss: 0.1382 - accuracy: 0.9495 - auc: 0.9941 - val_loss: 0.5432 - val_accuracy: 0.8368 - val_auc: 0.9479\n",
+      "\n",
+      "Testing Accuracy:  0.8835\n"
+     ]
+    }
+   ],
+   "source": [
+    "# batch size can have a huge effect on performance!\n",
+    "batch_size = 64\n",
+    "epochs = 5\n",
+    "\n",
+    "history = model.fit(train_instances_int, train_labels_1hot,\n",
+    "                    batch_size=batch_size,\n",
+    "                    epochs=epochs,\n",
+    "                    verbose=1,\n",
+    "                    validation_data=(val_instances_int, val_labels_1hot)\n",
+    "                   )\n",
+    "\n",
+    "loss, accuracy, auc = model.evaluate(test_instances_int, test_labels_1hot,\n",
+    "                                batch_size=batch_size,\n",
+    "                                verbose=False)\n",
+    "\n",
+    "print(\"\\nTesting Accuracy:  {:.4f}\".format(accuracy))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss, accuracy, auc = model.evaluate(test_instances_int, test_labels_1hot,\n",
+    "                                batch_size=batch_size,\n",
+    "                                verbose=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9577053189277649"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "auc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9995846152305603"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "auc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9685941338539124"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "auc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(69000, 28)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_instances_int.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(15200, 28)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val_instances_int.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1408474, 28)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_instances_int.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## LSTM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fine Tune BERT"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
