--- a/classifier/nn/test.ipynb
+++ b/classifier/nn/test.ipynb
@@ -23,30 +23,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7da314c042a64c3683a116c5ed112018",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading builder script:   0%|          | 0.00/3.20k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "metric = load_metric(\"roc_auc\", \"multi_class\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -73,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,30 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "metric = load_metric(\"roc_auc\", \"multi_class\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compute_metrics(eval_pred):\n",
-    "    pred_scores, refs = eval_pred \n",
-    "    metric = load_metric(\"roc_auc\", \"multiclass\")\n",
-    "    # predictions = np.argmax(logits)\n",
-    "\n",
-    "    return metric.compute(references=refs, prediction_scores=pred_scores, multi_class='ovr')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,27 +79,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "eval_pred = [pred_scores, refs]\n",
-    "# eval_pred = [test_preds, test_refs]\n",
-    "# eval_pred = [nPreds, nRefs]"
+    "predictions = (nPreds == nPreds.max(axis=1)[:,None]).astype(int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'roc_auc': 0.8541666666666666}"
+       "array([[1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [0, 0, 1],\n",
+       "       [1, 0, 0],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [1, 0, 0],\n",
+       "       [0, 0, 1],\n",
+       "       [1, 0, 0],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [1, 0, 0],\n",
+       "       [0, 0, 1],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [0, 0, 1],\n",
+       "       [1, 0, 0],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [1, 0, 0],\n",
+       "       [0, 0, 1],\n",
+       "       [1, 0, 0],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [1, 0, 0],\n",
+       "       [0, 0, 1],\n",
+       "       [1, 0, 0],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [0, 0, 1],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [0, 0, 1],\n",
+       "       [1, 0, 0],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [0, 0, 1],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [0, 0, 1],\n",
+       "       [1, 0, 0],\n",
+       "       [0, 0, 1],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [1, 0, 0],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_metrics(eval_pred):\n",
+    "    logits, refs = eval_pred \n",
+    "    metric = load_metric(\"roc_auc\", \"multiclass\")\n",
+    "    \n",
+    "\n",
+    "    return metric.compute(references=refs, prediction_scores=logits, multi_class='ovr')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# eval_pred = [pred_scores, refs]\n",
+    "# eval_pred = [test_preds, test_refs]\n",
+    "eval_pred = [predictions, nRefs]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'roc_auc': 0.6626208721036307}"
+      ]
+     },
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1027,7 +1122,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('reddit_env_test')",
+   "display_name": "Python 3.9.12 ('reddit_env')",
    "language": "python",
    "name": "python3"
   },
@@ -1046,7 +1141,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6c5bfe69c2b2d435baea75ee1a7865fc7666bb526179204de658e4f2811cb086"
+    "hash": "7913a71c8e34b61ec22a3bd55dc7c3ae241fdb6cefe9aa5fb754c5121c0e8c4d"
    }
   }
  },
