--- a/classifier/explainable/xgboost.ipynb
+++ b/classifier/explainable/xgboost.ipynb
@@ -9,13 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "import spacy\n",
+    "# import spacy\n",
     "import numpy as np\n",
     "import sklearn as skl \n",
     "import xgboost as xgb\n"
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
        "array([0., 1., 0.], dtype=float32)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -161,28 +161,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'size'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/Users/jakobschlierf/Desktop/Master/Thesis/Github/classifier/explainable/xgboost.ipynb Cell 7\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/jakobschlierf/Desktop/Master/Thesis/Github/classifier/explainable/xgboost.ipynb#ch0000014?line=0'>1</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mlen\u001b[39m(train_instances_int), train_labels_int\u001b[39m.\u001b[39;49msize)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'size'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "69000\n"
      ]
     }
    ],
    "source": [
-    "print(len(train_instances_int), "
+    "print(len(train_instances_int)) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,9 +200,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20:44:29] WARNING: ../src/learner.cc:627: \n",
+      "Parameters: { \"silent\" } might not be used.\n",
+      "\n",
+      "  This could be a false alarm, with some parameters getting used by language bindings but\n",
+      "  then being mistakenly passed down to XGBoost core, or some parameter actually being used\n",
+      "  but getting flagged wrongly here. Please open an issue if you find any such cases.\n",
+      "\n",
+      "\n",
+      "[20:44:29] WARNING: ../src/learner.cc:627: \n",
+      "Parameters: { \"silent\" } might not be used.\n",
+      "\n",
+      "  This could be a false alarm, with some parameters getting used by language bindings but\n",
+      "  then being mistakenly passed down to XGBoost core, or some parameter actually being used\n",
+      "  but getting flagged wrongly here. Please open an issue if you find any such cases.\n",
+      "\n",
+      "\n",
+      "[20:44:29] WARNING: ../src/learner.cc:627: \n",
+      "Parameters: { \"silent\" } might not be used.\n",
+      "\n",
+      "  This could be a false alarm, with some parameters getting used by language bindings but\n",
+      "  then being mistakenly passed down to XGBoost core, or some parameter actually being used\n",
+      "  but getting flagged wrongly here. Please open an issue if you find any such cases.\n",
+      "\n",
+      "\n",
+      "[20:44:29] WARNING: ../src/learner.cc:627: \n",
+      "Parameters: { \"silent\" } might not be used.\n",
+      "\n",
+      "  This could be a false alarm, with some parameters getting used by language bindings but\n",
+      "  then being mistakenly passed down to XGBoost core, or some parameter actually being used\n",
+      "  but getting flagged wrongly here. Please open an issue if you find any such cases.\n",
+      "\n",
+      "\n",
+      "[20:44:30] WARNING: ../src/learner.cc:627: \n",
+      "Parameters: { \"silent\" } might not be used.\n",
+      "\n",
+      "  This could be a false alarm, with some parameters getting used by language bindings but\n",
+      "  then being mistakenly passed down to XGBoost core, or some parameter actually being used\n",
+      "  but getting flagged wrongly here. Please open an issue if you find any such cases.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "num_round = 500\n",
     "seed = 42\n",
@@ -221,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -258,58 +301,58 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.629418</td>\n",
-       "      <td>0.001968</td>\n",
-       "      <td>218.150577</td>\n",
-       "      <td>0.747202</td>\n",
-       "      <td>0.628457</td>\n",
-       "      <td>0.005338</td>\n",
-       "      <td>109.073407</td>\n",
-       "      <td>1.310451</td>\n",
+       "      <td>0.759845</td>\n",
+       "      <td>0.001814</td>\n",
+       "      <td>218.330054</td>\n",
+       "      <td>0.676217</td>\n",
+       "      <td>0.733313</td>\n",
+       "      <td>0.004254</td>\n",
+       "      <td>109.108588</td>\n",
+       "      <td>1.326160</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.659238</td>\n",
-       "      <td>0.001865</td>\n",
-       "      <td>218.328955</td>\n",
-       "      <td>0.672002</td>\n",
-       "      <td>0.657398</td>\n",
-       "      <td>0.004045</td>\n",
-       "      <td>109.110620</td>\n",
-       "      <td>1.329719</td>\n",
+       "      <td>0.815736</td>\n",
+       "      <td>0.002401</td>\n",
+       "      <td>218.333337</td>\n",
+       "      <td>0.671118</td>\n",
+       "      <td>0.783347</td>\n",
+       "      <td>0.004543</td>\n",
+       "      <td>109.116321</td>\n",
+       "      <td>1.333643</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.674442</td>\n",
-       "      <td>0.001330</td>\n",
-       "      <td>218.331677</td>\n",
-       "      <td>0.670202</td>\n",
-       "      <td>0.673267</td>\n",
-       "      <td>0.004630</td>\n",
-       "      <td>109.132208</td>\n",
-       "      <td>1.338270</td>\n",
+       "      <td>0.850129</td>\n",
+       "      <td>0.001867</td>\n",
+       "      <td>218.337195</td>\n",
+       "      <td>0.673382</td>\n",
+       "      <td>0.812958</td>\n",
+       "      <td>0.003231</td>\n",
+       "      <td>109.114368</td>\n",
+       "      <td>1.335949</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.686991</td>\n",
-       "      <td>0.002981</td>\n",
-       "      <td>218.334494</td>\n",
-       "      <td>0.672477</td>\n",
-       "      <td>0.684855</td>\n",
-       "      <td>0.005718</td>\n",
-       "      <td>109.122501</td>\n",
-       "      <td>1.336336</td>\n",
+       "      <td>0.871339</td>\n",
+       "      <td>0.004394</td>\n",
+       "      <td>218.337015</td>\n",
+       "      <td>0.673368</td>\n",
+       "      <td>0.829098</td>\n",
+       "      <td>0.005645</td>\n",
+       "      <td>109.124072</td>\n",
+       "      <td>1.341030</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.699018</td>\n",
-       "      <td>0.001159</td>\n",
-       "      <td>218.338000</td>\n",
-       "      <td>0.671468</td>\n",
-       "      <td>0.696113</td>\n",
-       "      <td>0.004645</td>\n",
-       "      <td>109.107233</td>\n",
-       "      <td>1.325778</td>\n",
+       "      <td>0.887703</td>\n",
+       "      <td>0.005562</td>\n",
+       "      <td>218.336182</td>\n",
+       "      <td>0.669097</td>\n",
+       "      <td>0.841703</td>\n",
+       "      <td>0.007221</td>\n",
+       "      <td>109.114505</td>\n",
+       "      <td>1.333645</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -324,58 +367,58 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>495</th>\n",
-       "      <td>0.942751</td>\n",
-       "      <td>0.000362</td>\n",
-       "      <td>218.333984</td>\n",
-       "      <td>0.674818</td>\n",
-       "      <td>0.909610</td>\n",
-       "      <td>0.001936</td>\n",
-       "      <td>109.118729</td>\n",
-       "      <td>1.331167</td>\n",
+       "      <td>0.999699</td>\n",
+       "      <td>0.000006</td>\n",
+       "      <td>218.330725</td>\n",
+       "      <td>0.675186</td>\n",
+       "      <td>0.918024</td>\n",
+       "      <td>0.001223</td>\n",
+       "      <td>109.115831</td>\n",
+       "      <td>1.328617</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>496</th>\n",
-       "      <td>0.942808</td>\n",
-       "      <td>0.000386</td>\n",
-       "      <td>218.333984</td>\n",
-       "      <td>0.674818</td>\n",
-       "      <td>0.909649</td>\n",
-       "      <td>0.002002</td>\n",
-       "      <td>109.118729</td>\n",
-       "      <td>1.331167</td>\n",
+       "      <td>0.999700</td>\n",
+       "      <td>0.000006</td>\n",
+       "      <td>218.329904</td>\n",
+       "      <td>0.675854</td>\n",
+       "      <td>0.918009</td>\n",
+       "      <td>0.001208</td>\n",
+       "      <td>109.115831</td>\n",
+       "      <td>1.328617</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>497</th>\n",
-       "      <td>0.942894</td>\n",
-       "      <td>0.000384</td>\n",
-       "      <td>218.332883</td>\n",
-       "      <td>0.673912</td>\n",
-       "      <td>0.909704</td>\n",
-       "      <td>0.002010</td>\n",
-       "      <td>109.118729</td>\n",
-       "      <td>1.331167</td>\n",
+       "      <td>0.999701</td>\n",
+       "      <td>0.000006</td>\n",
+       "      <td>218.329904</td>\n",
+       "      <td>0.675854</td>\n",
+       "      <td>0.918017</td>\n",
+       "      <td>0.001216</td>\n",
+       "      <td>109.115831</td>\n",
+       "      <td>1.328617</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>498</th>\n",
-       "      <td>0.942959</td>\n",
-       "      <td>0.000385</td>\n",
-       "      <td>218.332883</td>\n",
-       "      <td>0.673912</td>\n",
-       "      <td>0.909735</td>\n",
-       "      <td>0.002010</td>\n",
-       "      <td>109.117049</td>\n",
-       "      <td>1.329781</td>\n",
+       "      <td>0.999702</td>\n",
+       "      <td>0.000007</td>\n",
+       "      <td>218.329904</td>\n",
+       "      <td>0.675854</td>\n",
+       "      <td>0.918000</td>\n",
+       "      <td>0.001231</td>\n",
+       "      <td>109.115831</td>\n",
+       "      <td>1.328617</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>499</th>\n",
-       "      <td>0.943034</td>\n",
-       "      <td>0.000382</td>\n",
-       "      <td>218.332513</td>\n",
-       "      <td>0.674247</td>\n",
-       "      <td>0.909718</td>\n",
-       "      <td>0.001970</td>\n",
-       "      <td>109.117049</td>\n",
-       "      <td>1.329781</td>\n",
+       "      <td>0.999702</td>\n",
+       "      <td>0.000007</td>\n",
+       "      <td>218.329904</td>\n",
+       "      <td>0.675854</td>\n",
+       "      <td>0.918010</td>\n",
+       "      <td>0.001227</td>\n",
+       "      <td>109.115831</td>\n",
+       "      <td>1.328617</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -384,35 +427,35 @@
       ],
       "text/plain": [
        "     train-auc-mean  train-auc-std  train-ams@0-mean  train-ams@0-std  \\\n",
-       "0          0.629418       0.001968        218.150577         0.747202   \n",
-       "1          0.659238       0.001865        218.328955         0.672002   \n",
-       "2          0.674442       0.001330        218.331677         0.670202   \n",
-       "3          0.686991       0.002981        218.334494         0.672477   \n",
-       "4          0.699018       0.001159        218.338000         0.671468   \n",
+       "0          0.759845       0.001814        218.330054         0.676217   \n",
+       "1          0.815736       0.002401        218.333337         0.671118   \n",
+       "2          0.850129       0.001867        218.337195         0.673382   \n",
+       "3          0.871339       0.004394        218.337015         0.673368   \n",
+       "4          0.887703       0.005562        218.336182         0.669097   \n",
        "..              ...            ...               ...              ...   \n",
-       "495        0.942751       0.000362        218.333984         0.674818   \n",
-       "496        0.942808       0.000386        218.333984         0.674818   \n",
-       "497        0.942894       0.000384        218.332883         0.673912   \n",
-       "498        0.942959       0.000385        218.332883         0.673912   \n",
-       "499        0.943034       0.000382        218.332513         0.674247   \n",
+       "495        0.999699       0.000006        218.330725         0.675186   \n",
+       "496        0.999700       0.000006        218.329904         0.675854   \n",
+       "497        0.999701       0.000006        218.329904         0.675854   \n",
+       "498        0.999702       0.000007        218.329904         0.675854   \n",
+       "499        0.999702       0.000007        218.329904         0.675854   \n",
        "\n",
        "     test-auc-mean  test-auc-std  test-ams@0-mean  test-ams@0-std  \n",
-       "0         0.628457      0.005338       109.073407        1.310451  \n",
-       "1         0.657398      0.004045       109.110620        1.329719  \n",
-       "2         0.673267      0.004630       109.132208        1.338270  \n",
-       "3         0.684855      0.005718       109.122501        1.336336  \n",
-       "4         0.696113      0.004645       109.107233        1.325778  \n",
+       "0         0.733313      0.004254       109.108588        1.326160  \n",
+       "1         0.783347      0.004543       109.116321        1.333643  \n",
+       "2         0.812958      0.003231       109.114368        1.335949  \n",
+       "3         0.829098      0.005645       109.124072        1.341030  \n",
+       "4         0.841703      0.007221       109.114505        1.333645  \n",
        "..             ...           ...              ...             ...  \n",
-       "495       0.909610      0.001936       109.118729        1.331167  \n",
-       "496       0.909649      0.002002       109.118729        1.331167  \n",
-       "497       0.909704      0.002010       109.118729        1.331167  \n",
-       "498       0.909735      0.002010       109.117049        1.329781  \n",
-       "499       0.909718      0.001970       109.117049        1.329781  \n",
+       "495       0.918024      0.001223       109.115831        1.328617  \n",
+       "496       0.918009      0.001208       109.115831        1.328617  \n",
+       "497       0.918017      0.001216       109.115831        1.328617  \n",
+       "498       0.918000      0.001231       109.115831        1.328617  \n",
+       "499       0.918010      0.001227       109.115831        1.328617  \n",
        "\n",
        "[500 rows x 8 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +467,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('reddit_env_test')",
+   "display_name": "Python 3.9.12 ('reddit_env')",
    "language": "python",
    "name": "python3"
   },
@@ -443,7 +486,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6c5bfe69c2b2d435baea75ee1a7865fc7666bb526179204de658e4f2811cb086"
+    "hash": "7913a71c8e34b61ec22a3bd55dc7c3ae241fdb6cefe9aa5fb754c5121c0e8c4d"
    }
   }
  },
